<resources>
    <string name="app_name">Ecommerce</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="join_now">Join Now</string>
    <string name="login">Login</string>
    <string name="tnc"><![CDATA[By using the app, you agree to the Terms & Conditions and Privacy Policy of TokoPhincon]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_register_with">or register with</string>
    <string name="register">Register</string>
    <string name="example_test_gmail_com">Example: test@gmail.com</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="or_login_with">or login with</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_is_invalid">Password is invalid</string>
    <string name="please_input_your_name">Please input your name</string>
    <string name="name">Name</string>
    <string name="term">Terms &amp; Conditions</string>
    <string name="condition">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="chart">Cart</string>
    <string name="menu">Menu</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="id">ID</string>
    <string name="en">EN</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="wishlist">Wishlist</string>
    <string name="transaction">Transaction</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="rating">Review</string>
    <string name="sale">Sale</string>
    <string name="lowest_price">Lowest price</string>
    <string name="highest_price">Highest price</string>
    <string name="sort">Sort</string>
    <string name="reset">Reset</string>
    <string name="apple">Apple</string>
    <string name="asus">Asus</string>
    <string name="dell">Dell</string>
    <string name="lenovo">Lenovo</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="lowest">Lowest</string>
    <string name="highest">Highest</string>
    <string name="show_products">Show products</string>
    <string name="rp_lowest"><![CDATA[> Rp. %1$s]]></string>
    <string name="rp_highest"><![CDATA[< Rp. %1$s]]></string>
    <string name="rating_sold">%1$.1f | Sold %2$d</string>
    <string name="io_exception_code">Connection</string>
    <string name="io_exception_message">Your connection is unavailable</string>
    <string name="http_exception_404_code">Empty</string>
    <string name="http_exception_404_message">Your requested data is unavailable</string>
    <string name="choose_picture">Choose picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="detail">Product Detail</string>
    <string name="review">Review</string>
    <string name="buy">Buy</string>
    <string name="add_chart">+ Cart</string>
    <string name="choose_variants">Choose variants</string>
    <string name="product_description">Product description</string>
    <string name="choose_all">Choose all</string>
    <string name="delete">Delete</string>
    <string name="total_payment">Total payment</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="sold">Sold %1$d</string>
    <string name="rate_review">%1$.1f (%2$d)</string>
    <string name="buyers_are_satisfied">%1$d %% buyers are satisfied</string>
    <string name="rate_review_num">%1$d rate · %2$d review</string>
    <string name="empty">Empty</string>
    <string name="item_s">%1$d Item(s)</string>
    <string name="left_stock">%1$d Left</string>
    <string name="stock">Stock %1$d</string>
    <string name="success_added_to_wishlist">Success added to wishlist</string>
    <string name="removed_from_wishlist">Removed from wishlist</string>
    <string name="success_added_to_chart">Success added to cart</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="checkout">Checkout</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="payment">Payment</string>
    <string name="purchased_item_s">Purchased item(s)</string>
    <string name="select_payment">Select payment</string>
    <string name="status">Status</string>
    <string name="transaction_detail">Transaction detail</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="payment_method">Payment method</string>
    <string name="shop">Shop</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="payment_success">Payment success</string>
    <string name="info">Info</string>
    <string name="transaction_successful">Transaction successful</string>
    <string name="date_time_notification">%1$s, %2$s</string>
    <string name="idr_currency">IDR</string>
    <string name="err_code_500">500</string>
    <string name="see_all">See all</string>
    <string name="buyer_reviews">Buyer review</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
</resources>