<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.main.store.SearchBottomSheetFragment">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dh_bottom_sheet"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/dh_bottom_sheet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_search_bs_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_700"
                android:text="@string/filter"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_search_bs_reset"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="@id/tv_search_bs_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_search_bs_filter" />

            <TextView
                android:id="@+id/tv_search_bs_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_600"
                android:text="@string/sort"
                app:layout_constraintStart_toStartOf="@id/tv_search_bs_filter"
                app:layout_constraintTop_toBottomOf="@id/tv_search_bs_filter" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_search_bs_sort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="screen"
                android:elevation="0dp"
                app:chipSpacingVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_search_bs_sort"
                app:layout_constraintTop_toBottomOf="@id/tv_search_bs_sort"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_rating"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_sale"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_lowest"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowest_price" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_highest"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highest_price" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_search_bs_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_600"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="@id/cg_search_bs_sort"
                app:layout_constraintTop_toBottomOf="@id/cg_search_bs_sort" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_search_bs_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:chipSpacingVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_search_bs_category"
                app:layout_constraintTop_toBottomOf="@id/tv_search_bs_category"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_apple"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apple" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_asus"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asus" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_dell"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dell" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_store_lenovo"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lenovo" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_search_bs_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_600"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="@id/cg_search_bs_category"
                app:layout_constraintTop_toBottomOf="@id/cg_search_bs_category" />

            <View
                android:id="@+id/v_acndhor_search_bs_mid"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_search_bs_lowest"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/lowest"
                app:layout_constraintEnd_toStartOf="@id/v_acndhor_search_bs_mid"
                app:layout_constraintStart_toStartOf="@id/tv_search_bs_category"
                app:layout_constraintTop_toBottomOf="@id/tv_search_bs_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_search_bs_lowest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_search_bs_highest"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/highest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/v_acndhor_search_bs_mid"
                app:layout_constraintTop_toBottomOf="@id/tv_search_bs_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_search_bs_highest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_search_bs_show_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/show_products"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/til_search_bs_highest"
                app:layout_constraintStart_toStartOf="@id/til_search_bs_lowest"
                app:layout_constraintTop_toBottomOf="@id/til_search_bs_lowest" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>